Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pas/lto.pas


function thinlto_create_codegen:Tthinlto_code_gen_t;cdecl;external libllvm;
{*
 * Frees the generator and all memory it internally allocated.
 * Upon return the thinlto_code_gen_t is no longer valid.
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_dispose(cg:Tthinlto_code_gen_t);cdecl;external libllvm;
{*
 * Add a module to a ThinLTO code generator. Identifier has to be unique among
 * all the modules in a code generator. The data buffer stays owned by the
 * client, and is expected to be available for the entire lifetime of the
 * thinlto_code_gen_t it is added to.
 *
 * On failure, returns NULL (check lto_get_error_message() for details).
 *
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_add_module(cg:Tthinlto_code_gen_t; identifier:Pchar; data:Pchar; length:longint);cdecl;external libllvm;
{*
 * Optimize and codegen all the modules added to the codegenerator using
 * ThinLTO. Resulting objects are accessible using thinlto_module_get_object().
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_process(cg:Tthinlto_code_gen_t);cdecl;external libllvm;
{*
 * Returns the number of object files produced by the ThinLTO CodeGenerator.
 *
 * It usually matches the number of input files, but this is not a guarantee of
 * the API and may change in future implementation, so the client should not
 * assume it.
 *
 * \since LTO_API_VERSION=18
  }
function thinlto_module_get_num_objects(cg:Tthinlto_code_gen_t):dword;cdecl;external libllvm;
{*
 * Returns a reference to the ith object file produced by the ThinLTO
 * CodeGenerator.
 *
 * Client should use \p thinlto_module_get_num_objects() to get the number of
 * available objects.
 *
 * \since LTO_API_VERSION=18
  }
function thinlto_module_get_object(cg:Tthinlto_code_gen_t; index:dword):TLTOObjectBuffer;cdecl;external libllvm;
{*
 * Returns the number of object files produced by the ThinLTO CodeGenerator.
 *
 * It usually matches the number of input files, but this is not a guarantee of
 * the API and may change in future implementation, so the client should not
 * assume it.
 *
 * \since LTO_API_VERSION=21
  }
function thinlto_module_get_num_object_files(cg:Tthinlto_code_gen_t):dword;cdecl;external libllvm;
{*
 * Returns the path to the ith object file produced by the ThinLTO
 * CodeGenerator.
 *
 * Client should use \p thinlto_module_get_num_object_files() to get the number
 * of available objects.
 *
 * \since LTO_API_VERSION=21
  }
function thinlto_module_get_object_file(cg:Tthinlto_code_gen_t; index:dword):Pchar;cdecl;external libllvm;
{*
 * Sets which PIC code model to generate.
 * Returns true on error (check lto_get_error_message() for details).
 *
 * \since LTO_API_VERSION=18
  }
function thinlto_codegen_set_pic_model(cg:Tthinlto_code_gen_t; para2:Tlto_codegen_model):Tlto_bool_t;cdecl;external libllvm;
{*
 * Sets the path to a directory to use as a storage for temporary bitcode files.
 * The intention is to make the bitcode files available for debugging at various
 * stage of the pipeline.
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_set_savetemps_dir(cg:Tthinlto_code_gen_t; save_temps_dir:Pchar);cdecl;external libllvm;
{*
 * Set the path to a directory where to save generated object files. This
 * path can be used by a linker to request on-disk files instead of in-memory
 * buffers. When set, results are available through
 * thinlto_module_get_object_file() instead of thinlto_module_get_object().
 *
 * \since LTO_API_VERSION=21
  }
procedure thinlto_set_generated_objects_dir(cg:Tthinlto_code_gen_t; save_temps_dir:Pchar);cdecl;external libllvm;
{*
 * Sets the cpu to generate code for.
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_set_cpu(cg:Tthinlto_code_gen_t; cpu:Pchar);cdecl;external libllvm;
{*
 * Disable CodeGen, only run the stages till codegen and stop. The output will
 * be bitcode.
 *
 * \since LTO_API_VERSION=19
  }
procedure thinlto_codegen_disable_codegen(cg:Tthinlto_code_gen_t; disable:Tlto_bool_t);cdecl;external libllvm;
{*
 * Perform CodeGen only: disable all other stages.
 *
 * \since LTO_API_VERSION=19
  }
procedure thinlto_codegen_set_codegen_only(cg:Tthinlto_code_gen_t; codegen_only:Tlto_bool_t);cdecl;external libllvm;
{*
 * Parse -mllvm style debug options.
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_debug_options(options:PPchar; number:longint);cdecl;external libllvm;
{*
 * Test if a module has support for ThinLTO linking.
 *
 * \since LTO_API_VERSION=18
  }
function lto_module_is_thinlto(mod:Tlto_module_t):Tlto_bool_t;cdecl;external libllvm;
{*
 * Adds a symbol to the list of global symbols that must exist in the final
 * generated code. If a function is not listed there, it might be inlined into
 * every usage and optimized away. For every single module, the functions
 * referenced from code outside of the ThinLTO modules need to be added here.
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_add_must_preserve_symbol(cg:Tthinlto_code_gen_t; name:Pchar; length:longint);cdecl;external libllvm;
{*
 * Adds a symbol to the list of global symbols that are cross-referenced between
 * ThinLTO files. If the ThinLTO CodeGenerator can ensure that every
 * references from a ThinLTO module to this symbol is optimized away, then
 * the symbol can be discarded.
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_add_cross_referenced_symbol(cg:Tthinlto_code_gen_t; name:Pchar; length:longint);cdecl;external libllvm;
{*
 * @ // endgoup LLVMCTLTO
 * @defgroup LLVMCTLTO_CACHING ThinLTO Cache Control
 * @ingroup LLVMCTLTO
 *
 * These entry points control the ThinLTO cache. The cache is intended to
 * support incremental builds, and thus needs to be persistent across builds.
 * The client enables the cache by supplying a path to an existing directory.
 * The code generator will use this to store objects files that may be reused
 * during a subsequent build.
 * To avoid filling the disk space, a few knobs are provided:
 *  - The pruning interval limits the frequency at which the garbage collector
 *    will try to scan the cache directory to prune expired entries.
 *    Setting to a negative number disables the pruning.
 *  - The pruning expiration time indicates to the garbage collector how old an
 *    entry needs to be to be removed.
 *  - Finally, the garbage collector can be instructed to prune the cache until
 *    the occupied space goes below a threshold.
 * @
  }
{*
 * Sets the path to a directory to use as a cache storage for incremental build.
 * Setting this activates caching.
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_set_cache_dir(cg:Tthinlto_code_gen_t; cache_dir:Pchar);cdecl;external libllvm;
{*
 * Sets the cache pruning interval (in seconds). A negative value disables the
 * pruning. An unspecified default value will be applied, and a value of 0 will
 * force prunning to occur.
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_set_cache_pruning_interval(cg:Tthinlto_code_gen_t; interval:longint);cdecl;external libllvm;
{*
 * Sets the maximum cache size that can be persistent across build, in terms of
 * percentage of the available space on the disk. Set to 100 to indicate
 * no limit, 50 to indicate that the cache size will not be left over half the
 * available space. A value over 100 will be reduced to 100, a value of 0 will
 * be ignored. An unspecified default value will be applied.
 *
 * The formula looks like:
 *  AvailableSpace = FreeSpace + ExistingCacheSize
 *  NewCacheSize = AvailableSpace * P/100
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_set_final_cache_size_relative_to_available_space(cg:Tthinlto_code_gen_t; percentage:dword);cdecl;external libllvm;
{*
 * Sets the expiration (in seconds) for an entry in the cache. An unspecified
 * default value will be applied. A value of 0 will be ignored.
 *
 * \since LTO_API_VERSION=18
  }
procedure thinlto_codegen_set_cache_entry_expiration(cg:Tthinlto_code_gen_t; expiration:dword);cdecl;external libllvm;
{*
 * Sets the maximum size of the cache directory (in bytes). A value over the
 * amount of available space on the disk will be reduced to the amount of
 * available space. An unspecified default value will be applied. A value of 0
 * will be ignored.
 *
 * \since LTO_API_VERSION=22
  }
procedure thinlto_codegen_set_cache_size_bytes(cg:Tthinlto_code_gen_t; max_size_bytes:dword);cdecl;external libllvm;
{*
 * Same as thinlto_codegen_set_cache_size_bytes, except the maximum size is in
 * megabytes (2^20 bytes).
 *
 * \since LTO_API_VERSION=23
  }
procedure thinlto_codegen_set_cache_size_megabytes(cg:Tthinlto_code_gen_t; max_size_megabytes:dword);cdecl;external libllvm;
{*
 * Sets the maximum number of files in the cache directory. An unspecified
 * default value will be applied. A value of 0 will be ignored.
 *
 * \since LTO_API_VERSION=22
  }
procedure thinlto_codegen_set_cache_size_files(cg:Tthinlto_code_gen_t; max_size_files:dword);cdecl;external libllvm;
{*
 * @ // endgroup LLVMCTLTO_CACHING
  }
{$endif}
{ LLVM_C_LTO_H  }

// === Konventiert am: 20-9-26 17:11:18 ===


implementation



end.
